--- a/src/main/site/concerts.xhtml
+++ b/src/main/site/concerts.xhtml
@@ -6,7 +6,7 @@
 <head>
 	<title>Concert History</title>
     
-	<link rel="stylesheet" type="text/css" href="about.css" />    
+	<link rel="stylesheet" type="text/css" href="css/concert.css" />    
 </head>
 
 <body>
