update juggling page

--- a/src/main/site/juggling.xhtml
+++ b/src/main/site/juggling.xhtml
@@ -4,13 +4,36 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title>Juggling</title>
-    
-	<link rel="stylesheet" type="text/css" href="about.css" />    
+	<title>Juggling in Pittsburgh</title>
+
+	<link rel="stylesheet" type="text/css" href="about.css" />
 </head>
 
 <body>
 
+<h1>Juggling in Pittsburgh</h1>
+
+Where to juggle in Pittsburgh (last updated 2012-12-08):
+<ul style="">
+    <li><strong>Pittsburgh Show Offs</strong><br />
+        Meeting Wednesday 7:30-9pm in the <a href="http://www.unionproject.org/">Union Project</a> (former church, 801 N Negley Avenue). Active regular meeting of medium sized group. 5$ donation suggested. See facebook page for short-term updates (watch out for planned renovations in January!). The meeting follows the meeting of the <a href="https://www.facebook.com/steelcityhoopunion">Steel City Hoop Union</a> (6:30-7:30pm).<br />
+        <a href="http://www.pittsburghshowoffs.com/">website</a>, <a href="http://www.facebook.com/pages/Pittsburgh-Show-Offs/208247425898638">facebook</a>, <a href="http://www.openstreetmap.org/?mlat=40.472&amp;mlon=-79.9265&amp;zoom=15&amp;layers=M">map</a>
+    </li>
+    <li><strong>Carnegie Mellon Masters of Flying Objects</strong><br />
+        Meeting not entirely regularly, but mostly on Sundays 2pm somewhere on the CMU Campus (usually The Cut, Wiegand Gym, or Newell Simon Atrium). Small group of students and nonstudents. Join mailing list for recent updates and locations. <br />
+        <a href="http://www.andrew.cmu.edu/user/juggle/">website</a>, <a href="https://lists.andrew.cmu.edu/mailman/listinfo/juggling-members">mailing list</a>, <a href="http://www.openstreetmap.org/?mlat=40.443&amp;mlon=-79.94343&amp;zoom=16&amp;layers=M">map</a>
+    </li>
+    <li><strong>Leave It To Beaver Valley Jugglers</strong><br />
+        Jugglers meeting about 45min outside Pittsburgh in Baden, PA (Villa St. Joseph, Heritage Hall). Small group meeting regularly Sundays 3-5:30pm. Organizers of the annual <a href="http://www.allinjest.com/jugglingfestclub.html">Not Quite Pittsburgh Juggling Festival</a>.<br />
+        <a href="http://www.allinjest.com/jugglingfestclub.html">website</a>, <a href="http://www.openstreetmap.org/?mlat=40.65079&amp;mlon=-80.23315&amp;zoom=12&amp;layers=M">map</a>
+    </li>
+</ul>
+
+<p>
+If you know other regular meetings, let me know about it (mail: kaestner (at) cmu.edu).
+I don’t run any of the clubs, I just wanted to make them easier to find. If you’re looking for a performer, please email someone else, perhaps a club organizer.
+Inspired by Iain Murray's <a href="http://homepages.inf.ed.ac.uk/imurray2/juggling/">site</a>.
+</p>
 
 
 <h1>Juggling-related traveling</h1>
@@ -18,13 +41,14 @@
 <h2>Visited juggling clubs</h2>
 
 <ul style="list-style-type:none">
-	<li>Magdeburg - Unisport, weekly 2007-2010</li>
+    <li>Pittsburgh, PA - <a href="http://www.andrew.cmu.edu/user/juggle/">Carnegie Mellon Masters of Flying Objects</a>, weekly since 2012</li>
+    <li>Pittsburgh, PA - <a href="http://www.pittsburghshowoffs.com/">Pittsburgh Show Offs</a>, weekly since 2012</li>
 	<li>Marburg - Unisport, weekly 2010-2012</li>
 	<li>Giessen - Unisport, weekly 2010-2012</li>
-        <li>Pittsburgh, PA - Carnegie Mellon Masters of Flying Objects, weekly since 2012</li>
+    <li>Magdeburg - Unisport, weekly 2007-2010</li>
 	<li>Austin, TX - Texas Juggling Society, 20.10.2011</li>
 	<li>West Laffayete, IN - Purdue Juggling and Unicycle Club, 07.03.2012</li>
-        <li>Edinburgh - The University of Edinburgh juggling club, 05.04.2012</li>
+    <li>Edinburgh - The University of Edinburgh juggling club, 05.04.2012</li>
 </ul>
 (did some passing in all those clubs)
 
@@ -33,41 +57,40 @@
 
 
 <ul style="list-style-type:none">
-  <li><span class="datum">10.09.2010 - 12.09.2010</span>	<span class="where">Karlsruhe</span> (<a href="http://pyramidal.kleinkunst-ka.de/">Jubiläumsconvention</a>)</li>
-        <li><span class="datum">11.03.2011 - 13.03.2011</span>	<span class="where">Dresden</span> (<a href="http://www.jonglieren-dresden.de/inhalt/2010-10-04-dresdner-jonglierfest-2011">Dresdner Jonglierfest 2011</a>)</li>
-        <li><span class="datum">01.04.2011 - 03.04.2011</span>	<span class="where">Bremen</span> (<a href="http://www.bremer-jonglierconvention.ws-online.de/">11. Bremer Jonglierconvention</a>)</li>
-        <li><span class="datum">20.05.2011 - 22.05.2011</span>	<span class="where">Freiburg</span> (<a href="http://www.jonglieren-in-freiburg.de/">13. Freiburger Jonglierfestival</a>)</li>
-        <li><span class="datum">23.06.2011 - 26.06.2011</span>	<span class="where">Berlin</span> (<a href="http://www.circulum.de/convention/12/">BJC 2011</a>)</li>
-        <li><span class="datum">06.08.2011 - 11.08.2011</span>	<span class="where">München</span> (<a href="http://www.ejc2011.org/">34th EJC 2011 - Gravity is on vacation</a>)</li>
-        <li><span class="datum">08.09.2011 - 11.09.2011</span>	<span class="where">Karlsruhe</span> (<a href="http://pyramidal.kleinkunst-ka.de/">Plopp</a>)</li>
-        <li><span class="datum">07.10.2011 - 09.10.2011</span>	<span class="where">Herxheim</span> (<a href="http://www.landau-jongliert.de/">Die Märchenhafte Con</a>)</li>
-        <li><span class="datum">11.11.2011 - 13.11.2011</span>	<span class="where">Nürnberg</span> (<a href="http://con.e-jong.de/">Baustelle</a>)</li>
-        <li><span class="datum">24.02.2012 - 26.02.2012</span>	<span class="where">Havixbeck</span> (<a href="http://www.convention-havixbeck.de/">Zention</a>)</li>
-        <li><span class="datum">02.03.2012 - 04.03.2012</span>	<span class="where">Dresden</span> (<a href="http://www.jonglieren-dresden.de/12-dresdner-jonglier-und-akrobatikfestival">Dresdner Jonglierfest 2012</a>)</li>
-        <li><span class="datum">09.03.2012 - 10.03.2012</span>	<span class="where">Champaign, IL</span> (<a href="https://netfiles.uiuc.edu/ro/www/IlliniJugglingandUnicycleClub/festival.htm">Champaign/Urbana Juggling Festival 2012</a>)</li>
-        <li><span class="datum">30.03.2012 - 01.04.2012</span>	<span class="where">Bremen</span> (<a href="http://convention.jonglieren-bremen.de/">12. Bremer Jonglierconvention</a>)</li>
-        <li><span class="datum">25.05.2012 - 27.05.2012</span>	<span class="where">Radolfzell</span> (<a href="http://dropamsee.tv-radolfzell.de/">Drop am See, 5. Radolfzeller Jonglierconvention</a>)</li>
-        <li><span class="datum">08.06.2012 - 10.06.2012</span>	<span class="where">Berlin</span> (<a href="http://www.circulum.de/convention/12/">BJC 2012</a>)</li>
-        <li><span class="datum">30.06.2012 - 01.07.2012</span>	<span class="where">Hannover</span> (<a href="http://www.algorithm-forge.com/langenacht/">Lange Jongliernacht</a>)</li>
-        <li><span class="datum">28.07.2012 - 05.08.2012</span>	<span class="where">Lublin</span> (<a href="http://ejc2012.org/">35th EJC 2012</a>)</li>
-        <li><span class="datum">31.08.2012 - 01.09.2012</span>	<span class="where">Toledo, OH</span> (<a href="http://www.assemblyofawesome.org/">The Assembly of Awesome</a>)</li>
+    <li><span class="datum">10.09.2010 - 12.09.2010</span>	<span class="where">Karlsruhe</span> (<a href="http://pyramidal.kleinkunst-ka.de/">Jubiläumsconvention</a>)</li>
+    <li><span class="datum">11.03.2011 - 13.03.2011</span>	<span class="where">Dresden</span> (<a href="http://www.jonglieren-dresden.de/inhalt/2010-10-04-dresdner-jonglierfest-2011">Dresdner Jonglierfest 2011</a>)</li>
+    <li><span class="datum">01.04.2011 - 03.04.2011</span>	<span class="where">Bremen</span> (<a href="http://www.bremer-jonglierconvention.ws-online.de/">11. Bremer Jonglierconvention</a>)</li>
+    <li><span class="datum">20.05.2011 - 22.05.2011</span>	<span class="where">Freiburg</span> (<a href="http://www.jonglieren-in-freiburg.de/">13. Freiburger Jonglierfestival</a>)</li>
+    <li><span class="datum">23.06.2011 - 26.06.2011</span>	<span class="where">Berlin</span> (<a href="http://www.circulum.de/convention/12/">BJC 2011</a>)</li>
+    <li><span class="datum">06.08.2011 - 11.08.2011</span>	<span class="where">München</span> (<a href="http://www.ejc2011.org/">34th EJC 2011 - Gravity is on vacation</a>)</li>
+    <li><span class="datum">08.09.2011 - 11.09.2011</span>	<span class="where">Karlsruhe</span> (<a href="http://pyramidal.kleinkunst-ka.de/">Plopp</a>)</li>
+    <li><span class="datum">07.10.2011 - 09.10.2011</span>	<span class="where">Herxheim</span> (<a href="http://www.landau-jongliert.de/">Die Märchenhafte Con</a>)</li>
+    <li><span class="datum">11.11.2011 - 13.11.2011</span>	<span class="where">Nürnberg</span> (<a href="http://con.e-jong.de/">Baustelle</a>)</li>
+    <li><span class="datum">24.02.2012 - 26.02.2012</span>	<span class="where">Havixbeck</span> (<a href="http://www.convention-havixbeck.de/">Zention</a>)</li>
+    <li><span class="datum">02.03.2012 - 04.03.2012</span>	<span class="where">Dresden</span> (<a href="http://www.jonglieren-dresden.de/12-dresdner-jonglier-und-akrobatikfestival">Dresdner Jonglierfest 2012</a>)</li>
+    <li><span class="datum">09.03.2012 - 10.03.2012</span>	<span class="where">Champaign, IL</span> (<a href="https://netfiles.uiuc.edu/ro/www/IlliniJugglingandUnicycleClub/festival.htm">Champaign/Urbana Juggling Festival 2012</a>)</li>
+    <li><span class="datum">30.03.2012 - 01.04.2012</span>	<span class="where">Bremen</span> (<a href="http://convention.jonglieren-bremen.de/">12. Bremer Jonglierconvention</a>)</li>
+    <li><span class="datum">25.05.2012 - 27.05.2012</span>	<span class="where">Radolfzell</span> (<a href="http://dropamsee.tv-radolfzell.de/">Drop am See, 5. Radolfzeller Jonglierconvention</a>)</li>
+    <li><span class="datum">08.06.2012 - 10.06.2012</span>	<span class="where">Berlin</span> (<a href="http://www.circulum.de/convention/12/">BJC 2012</a>)</li>
+    <li><span class="datum">30.06.2012 - 01.07.2012</span>	<span class="where">Hannover</span> (<a href="http://www.algorithm-forge.com/langenacht/">Lange Jongliernacht</a>)</li>
+    <li><span class="datum">28.07.2012 - 05.08.2012</span>	<span class="where">Lublin</span> (<a href="http://ejc2012.org/">35th EJC 2012</a>)</li>
+    <li><span class="datum">31.08.2012 - 01.09.2012</span>	<span class="where">Toledo, OH</span> (<a href="http://www.assemblyofawesome.org/">The Assembly of Awesome</a>)</li>
+    <li><span class="datum">19.10.2012 - 21.10.2012</span>	<span class="where">Cleveland, OH</span> (<a href="https://sites.google.com/a/case.edu/juggling/blog/clevelandcircus">Cleveland Circus</a>)</li>
+    <li><span class="datum">16.11.2012 - 28.11.2012</span>	<span class="where">Beaver, PA</span> (<a href="http://www.allinjest.com/jugglingfestclub.html">Not Quite Pittsburgh Juggling Festival</a>)</li>
 </ul>
 
 <h2>Planned juggling conventions</h2>
 
 <ul>
-        <li><span class="datum">19.10.2012 - 21.10.2012</span>	<span class="where">Cleveland, OH</span> (<a href="https://sites.google.com/a/case.edu/juggling/blog/clevelandcircus">Cleveland Circus</a>)</li>
-        <li><span class="datum">16.11.2012 - 28.11.2012</span>	<span class="where">Beaver, PA</span> (<a href="http://www.allinjest.com/jugglingfestclub.html">Not Quite Pittsburgh Juggling Festival</a>)</li>
-        <li><span class="datum">27.12.2012 - 03.01.2013</span>	<span class="where">Goettingen</span> (Pass-Out)</li>
-        <li><span class="datum">07.01.2013 - 13.01.2013</span>	<span class="where">San Diego, CA</span> (Pass Out X)</li>
+    <li><span class="datum">27.12.2012 - 03.01.2013</span>	<span class="where">Goettingen</span> (Pass-Out)</li>
+    <li><span class="datum">07.01.2013 - 13.01.2013</span>	<span class="where">San Diego, CA</span> (<a href="http://www.csulb.edu/~wmurray/passout.html">Pass Out X</a>)</li>
+    <li><span class="datum">15.07.2013 - 21.07.2013</span>	<span class="where">Bowling Green, OH</span> (<a href="http://www.juggle.org/ija/festival/">IJA Festival</a>)</li>
+    <li><span class="datum">27.07.2013 - 04.08.2013</span>	<span class="where">Toulouse</span> (<a href="http://www.ejc2013.org/">ECJ 2013</a>)</li>
 </ul>
 
-<hr />
-<p style="text-align:center">
-      <a href="http://validator.w3.org/check?uri=referer"><img
-          src="http://www.w3.org/Icons/valid-xhtml10"
-          alt="Valid XHTML 1.0!" height="31" width="88" /></a>
-    </p>
+<p>
+<a href="http://www.cs.cmu.edu/~ckaestne/">Christian K&auml;stner</a>
+</p>
 
 
 </body>
