--- a/src/main/site/concerts.xhtml
+++ b/src/main/site/concerts.xhtml
@@ -544,6 +544,7 @@
 <li><span class="datum">18.09.2012</span>	<span class="band">Metric</span> (Support <span class="band">Half Moon Run</span>); Pittsburgh - Stage AE; 43 USD</li>
 <li><span class="datum">29.09.2012</span>	<span class="band">The Antlers</span> (Support <span class="band">Port St. Willow</span>); Pittsburgh - Altar Bar; 15 USD</li>
 <li><span class="datum">11.10.2012</span>	<span class="band">Zammuto</span> (Support <span class="band">Lymbyc Systym</span>); Pittsburgh - Andy Warhol Museum; 15 USD</li>
+<li><span class="datum">12.11.2012</span>	<span class="band">Black Moth Super Rainbow</span> (Support <span class="band">The Stargazer Lilies</span>, <span class="band">Casket Girls</span>); Pittsburgh - Mr. Small's; 14 USD</li>
 
 </ul>
 
