--- a/src/main/site/juggling.xhtml
+++ b/src/main/site/juggling.xhtml
@@ -13,10 +13,10 @@
 
 <h1>Juggling in Pittsburgh</h1>
 
-Where to juggle in Pittsburgh (last updated 2012-12-08):
+Where to juggle in Pittsburgh (last updated 2013-01-17):
 <ul style="">
     <li><strong>Pittsburgh Show Offs</strong><br />
-        Meeting Wednesday 7:30-9pm in the <a href="http://www.unionproject.org/">Union Project</a> (former church, 801 N Negley Avenue). Active regular meeting of medium sized group. 5$ donation suggested. See facebook page for short-term updates (watch out for planned renovations in January!). The meeting follows the meeting of the <a href="https://www.facebook.com/steelcityhoopunion">Steel City Hoop Union</a> (6:30-7:30pm).<br />
+    Meeting Wednesday 7:30-9pm in the <a href="http://www.unionproject.org/">Union Project</a> (former church, 801 N Negley Avenue). Active regular meeting of medium sized group. 5$ donation suggested. See facebook page for short-term updates (watch out for planned renovations in January!). The meeting follows the meeting of the <a href="https://www.facebook.com/steelcityhoopunion">Steel City Hoop Union</a> (6:30-7:30pm). <strong>Meetings moved temporarily to Mondays due to constructions at the Union Project.</strong><br />
         <a href="http://www.pittsburghshowoffs.com/">website</a>, <a href="http://www.facebook.com/pages/Pittsburgh-Show-Offs/208247425898638">facebook</a>, <a href="http://www.openstreetmap.org/?mlat=40.472&amp;mlon=-79.9265&amp;zoom=15&amp;layers=M">map</a>
     </li>
     <li><strong>Carnegie Mellon Masters of Flying Objects</strong><br />
@@ -31,7 +31,7 @@ Where to juggle in Pittsburgh (last updated 2012-12-08):
 
 <p>
 If you know other regular meetings, let me know about it (mail: kaestner (at) cmu.edu).
-I don’t run any of the clubs, I just wanted to make them easier to find. If you’re looking for a performer, please email someone else, perhaps a club organizer.
+I don't run any of the clubs, I just wanted to make them easier to find. If you're looking for a performer, please email someone else, perhaps a club organizer.
 Inspired by Iain Murray's <a href="http://homepages.inf.ed.ac.uk/imurray2/juggling/">site</a>.
 </p>
 
