update juggling page and book news

--- a/src/main/site/juggling.xhtml
+++ b/src/main/site/juggling.xhtml
@@ -16,11 +16,11 @@
 Where to juggle in Pittsburgh (last updated 2013-01-17):
 <ul style="">
     <li><strong>Pittsburgh Show Offs</strong><br />
-    Meeting Wednesday 7:30-9pm in the <a href="http://www.unionproject.org/">Union Project</a> (former church, 801 N Negley Avenue). Active regular meeting of medium sized group. 5$ donation suggested. See facebook page for short-term updates. The meeting follows the meeting of the <a href="https://www.facebook.com/steelcityhoopunion">Steel City Hoop Union</a> (6:30-7:30pm). <strong>Meetings moved temporarily to Mondays until March due to constructions at the Union Project.</strong><br />
+    Meeting Wednesday 7:30-9pm in the <a href="http://www.unionproject.org/">Union Project</a> (former church, 801 N Negley Avenue). Active regular meeting of medium sized group. See facebook page for short-term updates. The meeting follows the meeting of the <a href="https://www.facebook.com/steelcityhoopunion">Steel City Hoop Union</a> (6:30-7:30pm). <br />
         <a href="http://www.pittsburghshowoffs.com/">website</a>, <a href="http://www.facebook.com/pages/Pittsburgh-Show-Offs/208247425898638">facebook</a>, <a href="http://www.openstreetmap.org/?mlat=40.472&amp;mlon=-79.9265&amp;zoom=15&amp;layers=M">map</a>
     </li>
     <li><strong>Carnegie Mellon Masters of Flying Objects</strong><br />
-        Meeting Sundays 2-4pm on the CMU campus. During winter, meetings are in the Newell Simon Atrium. Small group of students and nonstudents. Join mailing list for short-term updates. <br />
+        Meeting Sundays 2-4pm on or near the CMU campus. During the summer we meet in front of the Carnegie Library on Schengly Plaza; in bad wheather our fallback place is the atrium of Newell Simon Hall. Medium sized group of students and nonstudents. Join mailing list for short-term updates (or send me a mail asking about next meeting). <br />
         <a href="http://www.andrew.cmu.edu/user/juggle/">website</a>, <a href="https://lists.andrew.cmu.edu/mailman/listinfo/juggling-members">mailing list</a>, <a href="http://www.openstreetmap.org/?mlat=40.443&amp;mlon=-79.94343&amp;zoom=16&amp;layers=M">map</a>
     </li>
     <li><strong>Leave It To Beaver Valley Jugglers</strong><br />
@@ -79,15 +79,14 @@ Inspired by Iain Murray's <a href="http://homepages.inf.ed.ac.uk/imurray2/juggli
     <li><span class="datum">16.11.2012 - 28.11.2012</span>	<span class="where">Beaver, PA</span> (<a href="http://www.allinjest.com/jugglingfestclub.html">Not Quite Pittsburgh Juggling Festival</a>)</li>
     <li><span class="datum">27.12.2012 - 02.01.2013</span>	<span class="where">Goettingen</span> (Pass-Out 10)</li>
     <li><span class="datum">08.01.2013 - 13.01.2013</span>	<span class="where">San Diego, CA</span> (<a href="http://www.csulb.edu/~wmurray/passout.html">Pass Out X</a>)</li>
+    <li><span class="datum">05.04.2013 - 07.04.2013</span>	<span class="where">College Park, MD</span> (<a href="http://www.facebook.com/events/120730521438033/">Congress of Jugglers 2013</a>)</li>
+    <li><span class="datum">12.04.2013 - 14.04.2013</span>	<span class="where">Rochester, NY</span> (<a href="http://www.rit.edu/sg/jugglingclub/jugglein/">The 36th RIT Spring Juggle-In</a>)</li>
+    <li><span class="datum">18.05.2013 - 19.05.2013</span>	<span class="where">Angeles National Forest, CA</span> (Sturtevant Camp Festival)</li>
 </ul>
 
 <h2>Planned juggling conventions</h2>
 
 <ul>
-    <li><span class="datum">01.03.2013 - 03.03.2013</span>	<span class="where">Lehighton, PA</span> (<a href="http://poconojugglefest.webs.com/">As Yet Unnamed Juggle Fest in the Poconos</a>)</li>
-    <li><span class="datum">05.04.2013 - 07.04.2013</span>	<span class="where">College Park, MD</span> (<a href="http://www.facebook.com/events/120730521438033/">Congress of Jugglers 2013</a>)</li>
-    <li><span class="datum">12.04.2013 - 14.04.2013</span>	<span class="where">Rochester, NY</span> (<a href="http://www.rit.edu/sg/jugglingclub/jugglein/">The 36th RIT Spring Juggle-In</a>)</li>
-    <li><span class="datum">18.05.2013 - 19.05.2013</span>	<span class="where">Pasadena, CA</span> (Sturtevant Camp Festival)</li>
     <li><span class="datum">15.07.2013 - 21.07.2013</span>	<span class="where">Bowling Green, OH</span> (<a href="http://www.juggle.org/ija/festival/">IJA Festival</a>)</li>
     <li><span class="datum">27.07.2013 - 04.08.2013</span>	<span class="where">Toulouse</span> (<a href="http://www.ejc2013.org/">ECJ 2013</a>)</li>
 </ul>
