--- a/src/main/site/juggling.xhtml
+++ b/src/main/site/juggling.xhtml
@@ -20,7 +20,7 @@ Where to juggle in Pittsburgh (last updated 2013-01-17):
         <a href="http://www.pittsburghshowoffs.com/">website</a>, <a href="http://www.facebook.com/pages/Pittsburgh-Show-Offs/208247425898638">facebook</a>, <a href="http://www.openstreetmap.org/?mlat=40.472&amp;mlon=-79.9265&amp;zoom=15&amp;layers=M">map</a>
     </li>
     <li><strong>Carnegie Mellon Masters of Flying Objects</strong><br />
-        Meeting Sundays 2-4pm on or near the CMU campus. During the summer we meet in front of the Carnegie Library on Schengly Plaza; in bad wheather our fallback place is the atrium of Newell Simon Hall. Medium sized group of students and nonstudents. Join mailing list for short-term updates (or send me a mail asking about next meeting). <br />
+        Meeting Sundays 2-4pm and Thursdays 6-8pm on or near the CMU campus. During the summer Sunday meetings are in front of the Carnegie Library on Schengly Plaza; in bad wheather our fallback place is the atrium of Newell Simon Hall. Thursday meetings are on the cut in front of the Purnell Center. Medium sized group of students and nonstudents. Join mailing list for short-term updates (or send me a mail asking about next meeting). <br />
         <a href="http://www.andrew.cmu.edu/user/juggle/">website</a>, <a href="https://lists.andrew.cmu.edu/mailman/listinfo/juggling-members">mailing list</a>, <a href="http://www.openstreetmap.org/?mlat=40.443&amp;mlon=-79.94343&amp;zoom=16&amp;layers=M">map</a>
     </li>
     <li><strong>Leave It To Beaver Valley Jugglers</strong><br />
@@ -43,12 +43,13 @@ Inspired by Iain Murray's <a href="http://homepages.inf.ed.ac.uk/imurray2/juggli
 <ul style="list-style-type:none">
     <li>Pittsburgh, PA - <a href="http://www.andrew.cmu.edu/user/juggle/">Carnegie Mellon Masters of Flying Objects</a>, weekly since 2012</li>
     <li>Pittsburgh, PA - <a href="http://www.pittsburghshowoffs.com/">Pittsburgh Show Offs</a>, weekly since 2012</li>
-	<li>Marburg - Unisport, weekly 2010-2012</li>
-	<li>Giessen - Unisport, weekly 2010-2012</li>
+    <li>Marburg - Unisport, weekly 2010-2012</li>
+    <li>Giessen - Unisport, weekly 2010-2012</li>
     <li>Magdeburg - Unisport, weekly 2007-2010</li>
-	<li>Austin, TX - Texas Juggling Society, 20.10.2011</li>
-	<li>West Laffayete, IN - Purdue Juggling and Unicycle Club, 07.03.2012</li>
+    <li>Austin, TX - Texas Juggling Society, 20.10.2011</li>
+    <li>West Laffayete, IN - Purdue Juggling and Unicycle Club, 07.03.2012</li>
     <li>Edinburgh - The University of Edinburgh juggling club, 05.04.2012</li>
+    <li>Minneapolis - The Minnesota Neverthriving, 03.06.2013</li>
 </ul>
 (did some passing in all those clubs)
 
