--- a/src/main/site/juggling.xhtml
+++ b/src/main/site/juggling.xhtml
@@ -41,7 +41,7 @@ Inspired by Iain Murray's <a href="http://homepages.inf.ed.ac.uk/imurray2/juggli
 <h2>Visited juggling clubs</h2>
 
 <ul style="list-style-type:none">
-    <li>Pittsburgh, PA - <a href="http://www.andrew.cmu.edu/user/juggle/">Carnegie Mellon Masters of Flying Objects</a>, weekly since 2012</li>
+    <li>Pittsburgh, PA - <a href="http://www.andrew.cmu.edu/user/juggle/">Carnegie Mellon Masters of Flying Objects</a>, once or twice a week since 2012</li>
     <li>Pittsburgh, PA - <a href="http://www.pittsburghshowoffs.com/">Pittsburgh Show Offs</a>, weekly since 2012</li>
     <li>Marburg - Unisport, weekly 2010-2012</li>
     <li>Giessen - Unisport, weekly 2010-2012</li>
@@ -83,13 +83,18 @@ Inspired by Iain Murray's <a href="http://homepages.inf.ed.ac.uk/imurray2/juggli
     <li><span class="datum">05.04.2013 - 07.04.2013</span>	<span class="where">College Park, MD</span> (<a href="http://www.facebook.com/events/120730521438033/">Congress of Jugglers 2013</a>)</li>
     <li><span class="datum">12.04.2013 - 14.04.2013</span>	<span class="where">Rochester, NY</span> (<a href="http://www.rit.edu/sg/jugglingclub/jugglein/">The 36th RIT Spring Juggle-In</a>)</li>
     <li><span class="datum">18.05.2013 - 19.05.2013</span>	<span class="where">Angeles National Forest, CA</span> (Sturtevant Camp Festival)</li>
+    <li><span class="datum">15.07.2013 - 21.07.2013</span>	<span class="where">Bowling Green, OH</span> (<a href="http://www.juggle.org/ija/festival/">IJA Festival</a>)</li>
+    <li><span class="datum">27.07.2013 - 04.08.2013</span>	<span class="where">Toulouse</span> (<a href="http://www.ejc2013.org/">ECJ 2013</a>)</li>
 </ul>
 
 <h2>Planned juggling conventions</h2>
 
 <ul>
-    <li><span class="datum">15.07.2013 - 21.07.2013</span>	<span class="where">Bowling Green, OH</span> (<a href="http://www.juggle.org/ija/festival/">IJA Festival</a>)</li>
-    <li><span class="datum">27.07.2013 - 04.08.2013</span>	<span class="where">Toulouse</span> (<a href="http://www.ejc2013.org/">ECJ 2013</a>)</li>
+    <li><span class="datum">04.10.2013 - 06.10.2013</span>	<span class="where">Ashville, NC</span> (<a href="http://www.ashevillejugglingfestival.com/">Ashville Juggling Festival</a>)</li>
+    <li><span class="datum">01.11.2013 - 03.11.2013</span>	<span class="where">Beaver, PA</span> (<a href="http://www.allinjest.com/jugglingfestclub.html">Not Quite Pittsburgh Juggling Festival</a>)</li>
+    <li><span class="datum">27.12.2013 - 02.01.2014</span>	<span class="where">Enschede</span> (Pass-Out 11)</li>
+    <li><span class="datum">28.07.2014 - 02.08.2014</span>	<span class="where">West Lafayette, OH</span> (<a href="http://www.juggle.org/ija/festival/">IJA Festival</a>)</li>
+    <li><span class="datum">19.07.2014 - 27.07.2014</span>	<span class="where">Millstreet, Ireland</span> (<a href="http://ejc2014.org/">ECJ 2013</a>)</li>
 </ul>
 
 <p>
