--- a/src/main/site/juggling.xhtml
+++ b/src/main/site/juggling.xhtml
@@ -13,14 +13,14 @@
 
 <h1>Juggling in Pittsburgh</h1>
 
-Where to juggle in Pittsburgh (last updated 2013-01-17):
+Where to juggle in Pittsburgh (last updated 2013-08-30):
 <ul style="">
     <li><strong>Pittsburgh Show Offs</strong><br />
     Meeting Wednesday 7:30-9pm in the <a href="http://www.unionproject.org/">Union Project</a> (former church, 801 N Negley Avenue). Active regular meeting of medium sized group. See facebook page for short-term updates. The meeting follows the meeting of the <a href="https://www.facebook.com/steelcityhoopunion">Steel City Hoop Union</a> (6:30-7:30pm). <br />
         <a href="http://www.pittsburghshowoffs.com/">website</a>, <a href="http://www.facebook.com/pages/Pittsburgh-Show-Offs/208247425898638">facebook</a>, <a href="http://www.openstreetmap.org/?mlat=40.472&amp;mlon=-79.9265&amp;zoom=15&amp;layers=M">map</a>
     </li>
     <li><strong>Carnegie Mellon Masters of Flying Objects</strong><br />
-        Meeting Sundays 2-4pm and Thursdays 6-8pm on or near the CMU campus. During the summer Sunday meetings are in front of the Carnegie Library on Schengly Plaza; in bad wheather our fallback place is the atrium of Newell Simon Hall. Thursday meetings are on the cut in front of the Purnell Center. Medium sized group of students and nonstudents. Join mailing list for short-term updates (or send me a mail asking about next meeting). <br />
+        Meeting Sundays 4-6pm and Fridays 6-8pm on or near the CMU campus. Meetings are typically outside on the cut in front of Purnell; in bad wheather our fallback place is the atrium of Newell Simon Hall. Growing group of students and nonstudents. Join mailing list for short-term updates (or send me a mail asking about next meeting). <br />
         <a href="http://www.andrew.cmu.edu/user/juggle/">website</a>, <a href="https://lists.andrew.cmu.edu/mailman/listinfo/juggling-members">mailing list</a>, <a href="http://www.openstreetmap.org/?mlat=40.443&amp;mlon=-79.94343&amp;zoom=16&amp;layers=M">map</a>
     </li>
     <li><strong>Leave It To Beaver Valley Jugglers</strong><br />
@@ -90,7 +90,7 @@ Inspired by Iain Murray's <a href="http://homepages.inf.ed.ac.uk/imurray2/juggli
 <h2>Planned juggling conventions</h2>
 
 <ul>
-    <li><span class="datum">04.10.2013 - 06.10.2013</span>	<span class="where">Ashville, NC</span> (<a href="http://www.ashevillejugglingfestival.com/">Ashville Juggling Festival</a>)</li>
+    <li><span class="datum">04.10.2013 - 06.10.2013</span>	<span class="where">Asheville, NC</span> (<a href="http://www.ashevillejugglingfestival.com/">Ashville Juggling Festival</a>)</li>
     <li><span class="datum">01.11.2013 - 03.11.2013</span>	<span class="where">Beaver, PA</span> (<a href="http://www.allinjest.com/jugglingfestclub.html">Not Quite Pittsburgh Juggling Festival</a>)</li>
     <li><span class="datum">27.12.2013 - 02.01.2014</span>	<span class="where">Enschede</span> (Pass-Out 11)</li>
     <li><span class="datum">28.07.2014 - 02.08.2014</span>	<span class="where">West Lafayette, OH</span> (<a href="http://www.juggle.org/ija/festival/">IJA Festival</a>)</li>
