--- a/src/main/site/juggling.xhtml
+++ b/src/main/site/juggling.xhtml
@@ -16,11 +16,11 @@
 Where to juggle in Pittsburgh (last updated 2013-08-30):
 <ul style="">
     <li><strong>Pittsburgh Show Offs</strong><br />
-    Meeting Wednesday 7:30-9pm in the <a href="http://www.unionproject.org/">Union Project</a> (former church, 801 N Negley Avenue). Active regular meeting of medium sized group. See facebook page for short-term updates. The meeting follows the meeting of the <a href="https://www.facebook.com/steelcityhoopunion">Steel City Hoop Union</a> (6:30-7:30pm). <br />
+    Meeting Wednesday 7:30-9pm in the <a href="http://www.unionproject.org/">Union Project</a> (former church, 801 N Negley Avenue). Active, mostly regular meeting of small group. See facebook page for short-term updates. The meeting follows the meeting of the <a href="https://www.facebook.com/steelcityhoopunion">Steel City Hoop Union</a> (6:30-7:30pm). <br />
         <a href="http://www.pittsburghshowoffs.com/">website</a>, <a href="http://www.facebook.com/pages/Pittsburgh-Show-Offs/208247425898638">facebook</a>, <a href="http://www.openstreetmap.org/?mlat=40.472&amp;mlon=-79.9265&amp;zoom=15&amp;layers=M">map</a>
     </li>
     <li><strong>Carnegie Mellon Masters of Flying Objects</strong><br />
-        Meeting Sundays 4-6pm and Fridays 6-8pm on or near the CMU campus. Meetings are typically outside on the cut in front of Purnell; in bad wheather our fallback place is the atrium of Newell Simon Hall. Growing group of students and nonstudents. Join mailing list for short-term updates (or send me a mail asking about next meeting). <br />
+        Meeting Sundays 4-6pm and Fridays 6-8pm on or near the CMU campus. Meetings are typically outside on the cut in front of Purnell; in bad wheather our fallback place is the atrium of Newell Simon Hall. Growing group of students and nonstudents. See news section on the website or join mailing list for short-term updates. <br />
         <a href="http://www.andrew.cmu.edu/user/juggle/">website</a>, <a href="https://lists.andrew.cmu.edu/mailman/listinfo/juggling-members">mailing list</a>, <a href="http://www.openstreetmap.org/?mlat=40.443&amp;mlon=-79.94343&amp;zoom=16&amp;layers=M">map</a>
     </li>
     <li><strong>Leave It To Beaver Valley Jugglers</strong><br />
