--- a/src/main/site/juggling.xhtml
+++ b/src/main/site/juggling.xhtml
@@ -20,13 +20,17 @@ Where to juggle in Pittsburgh (last updated 2013-08-30):
     <a href="http://www.pittsburghshowoffs.com/">website</a>, <a href="http://www.facebook.com/pages/Pittsburgh-Show-Offs/208247425898638">facebook</a><!--, <a href="http://www.openstreetmap.org/?mlat=40.472&amp;mlon=-79.9265&amp;zoom=15&amp;layers=M">map</a>-->
     </li>
     <li><strong>Carnegie Mellon Masters of Flying Objects</strong><br />
-        Meeting Sundays 4-6pm and Wednesdays 6-8pm on or near the CMU campus. In nice weather, meetings are typically outside on the cut in front of Purnell; in bad weather the Sunday meeting is the atrium of Newell Simon Hall and the Wednesday meeting is in a changing location on campus. Growing group of students and nonstudents. See news section on the website or join mailing list for short-term updates. <br />
+        Meeting Sundays 4-6pm and Wednesdays 6-8pm on or near the CMU campus. In nice weather, meetings are typically outside on the cut in front of Purnell; in the winter and in bad weather the Sunday meeting is the atrium of Newell Simon Hall and the Wednesday meeting is in a changing location on campus. Growing group of students and nonstudents. See news section on the website or join mailing list for short-term updates. <br />
         <a href="http://www.andrew.cmu.edu/user/juggle/">website</a>, <a href="https://lists.andrew.cmu.edu/mailman/listinfo/juggling-members">mailing list</a>, <a href="http://www.openstreetmap.org/?mlat=40.443&amp;mlon=-79.94343&amp;zoom=16&amp;layers=M">map</a>
     </li>
+    <li><strong>The Steel City Clown Brigade</strong></br />
+        Clown troup with lots of children who do also some juggling. Meeting in Homestead, PA. See website for meeting times.<br />
+        <a href="http://steelcityclownbrigade.blogspot.com/">website</a>
+        </li>
     <li><strong>Leave It To Beaver Valley Jugglers</strong><br />
         Jugglers meeting about 45min outside Pittsburgh in Baden, PA (Villa St. Joseph, Heritage Hall). Small group meeting regularly Sundays 3-5:30pm. Organizers of the annual <a href="http://www.allinjest.com/jugglingfestclub.html">Not Quite Pittsburgh Juggling Festival</a>.<br />
         <a href="http://www.allinjest.com/jugglingfestclub.html">website</a>, <a href="http://www.openstreetmap.org/?mlat=40.65079&amp;mlon=-80.23315&amp;zoom=12&amp;layers=M">map</a>
-    </li>
+        </li>
 </ul>
 
 <p>
@@ -42,14 +46,16 @@ Inspired by Iain Murray's <a href="http://homepages.inf.ed.ac.uk/imurray2/juggli
 
 <ul style="list-style-type:none">
     <li>Pittsburgh, PA - <a href="http://www.andrew.cmu.edu/user/juggle/">Carnegie Mellon Masters of Flying Objects</a>, once or twice a week since 2012</li>
-    <li>Pittsburgh, PA - <a href="http://www.pittsburghshowoffs.com/">Pittsburgh Show Offs</a>, weekly since 2012</li>
+    <li>Pittsburgh, PA - <a href="http://www.pittsburghshowoffs.com/">Pittsburgh Show Offs</a>, weekly 2012-2013</li>
     <li>Marburg - Unisport, weekly 2010-2012</li>
     <li>Giessen - Unisport, weekly 2010-2012</li>
     <li>Magdeburg - Unisport, weekly 2007-2010</li>
     <li>Austin, TX - Texas Juggling Society, 20.10.2011</li>
     <li>West Laffayete, IN - Purdue Juggling and Unicycle Club, 07.03.2012</li>
     <li>Edinburgh - The University of Edinburgh juggling club, 05.04.2012</li>
-    <li>Minneapolis - The Minnesota Neverthriving, 03.06.2013</li>
+    <li>Minneapolis, ME - The Minnesota Neverthriving, 03.06.2013</li>
+    <li>Lincoln, NE - Lincoln City Jugglers, 04.12.2013</li>
+    <li>Ames, IA - ISU Juggling and Unicycling Club, 04.12.2013</li>
 </ul>
 (did some passing in all those clubs)
 
@@ -85,15 +91,17 @@ Inspired by Iain Murray's <a href="http://homepages.inf.ed.ac.uk/imurray2/juggli
     <li><span class="datum">18.05.2013 - 19.05.2013</span>	<span class="where">Angeles National Forest, CA</span> (Sturtevant Camp Festival)</li>
     <li><span class="datum">15.07.2013 - 21.07.2013</span>	<span class="where">Bowling Green, OH</span> (<a href="http://www.juggle.org/ija/festival/">IJA Festival</a>)</li>
     <li><span class="datum">27.07.2013 - 04.08.2013</span>	<span class="where">Toulouse</span> (<a href="http://www.ejc2013.org/">ECJ 2013</a>)</li>
+    <li><span class="datum">04.10.2013 - 06.10.2013</span>	<span class="where">Asheville, NC</span> (<a href="http://www.ashevillejugglingfestival.com/">Asheville Juggling Festival</a>)</li>
+    <li><span class="datum">12.10.2013</span>	<span class="where">Cleveland, OH</span> (<a href="https://www.facebook.com/events/582125768486298/">Cleveland Circus</a>)</li>
+    <li><span class="datum">01.11.2013 - 02.11.2013</span>	<span class="where">Sewickley, PA</span> (<a href="http://www.allinjest.com/jugglingfestclub.html">Not Quite Pittsburgh Juggling Festival</a>)</li>
 </ul>
 
 <h2>Planned juggling conventions</h2>
 
 <ul>
-    <li><span class="datum">04.10.2013 - 06.10.2013</span>	<span class="where">Asheville, NC</span> (<a href="http://www.ashevillejugglingfestival.com/">Ashville Juggling Festival</a>)</li>
-    <li><span class="datum">01.11.2013 - 03.11.2013</span>	<span class="where">Beaver, PA</span> (<a href="http://www.allinjest.com/jugglingfestclub.html">Not Quite Pittsburgh Juggling Festival</a>)</li>
     <li><span class="datum">27.12.2013 - 02.01.2014</span>	<span class="where">Enschede</span> (Pass-Out 11)</li>
-    <li><span class="datum">28.07.2014 - 02.08.2014</span>	<span class="where">West Lafayette, OH</span> (<a href="http://www.juggle.org/ija/festival/">IJA Festival</a>)</li>
+    <li><span class="datum">31.01.2014 - 02.02.2014</span>	<span class="where">Atlanta, GA</span> (<a href="http://atlantajugglers.org/festivals/gh14.htm">36th Annual Groundhog Day Jugglers Festival</a>)</li>
+    <li><span class="datum">28.07.2014 - 02.08.2014</span>	<span class="where">West Lafayette, IN</span> (<a href="http://www.juggle.org/ija/festival/">IJA Festival</a>)</li>
     <li><span class="datum">19.07.2014 - 27.07.2014</span>	<span class="where">Millstreet, Ireland</span> (<a href="http://ejc2014.org/">ECJ 2013</a>)</li>
 </ul>
 
