update prices for old concerts

--- a/src/main/site/concerts.xhtml
+++ b/src/main/site/concerts.xhtml
@@ -26,7 +26,7 @@
     (<span class="band">Tricky</span>, <span class="band">Manic Street Preachers</span>, <span class="band">Guano Apes</span>, <span class="band">Foo Fighters</span>, <span class="band">Basement Jaxx</span>); Weeze; 149 DM</li>
 <li><span class="datum">18.08.2001</span>	<span class="festival">15<sup>th</sup> Bizarre Festival</span>
     (<span class="band">Hosh</span>, <span class="band">Subterfuge</span>, <span class="band">Scycs</span>, <span class="band">Uncle Ho</span>, <span class="band">Bs 2000</span>, <span class="band highlight">Apocalyptica</span>, <span class="band">Josh Joplin Group</span>, <span class="band">Blumfeld</span>, <span class="band">Emil Bulls</span>, <span class="band">The (International) Noise Conspiracy</span>, <span class="band">Slut</span>, <span class="band">Ash</span>); Weeze; 149 DM</li>
-<li><span class="datum">13.04.2002</span>	<span class="band">Godspeed You! Black Emperor</span>; Köln - Gebäude 9; ~16 EUR</li>
+<li><span class="datum">13.04.2002</span>	<span class="band">Godspeed You! Black Emperor</span>; Köln - Gebäude 9; 13.44 EUR</li>
 <li><span class="datum">20.05.2002</span>	<span class="band">Roger Waters</span>; Oberhausen - Arena; ~55 EUR</li>
 <li><span class="datum">02.06.2002</span>	<span class="band">Aereogramme</span> (Support: <span class="band">Ampersand</span>); Münster - Gleis 22; 9 EUR</li>
 <li><span class="datum">22.06.2002</span>	<span class="festival">Hurricane Festival 2002</span> 
@@ -52,7 +52,7 @@
 <li><span class="datum">10.11.2002</span>	<span class="festival">Visions Festival</span>
     (<span class="band">Millionair</span>, <span class="band">Danko Jones</span>, <span class="band">Prong</span>, <span class="band">Dredg</span>, <span class="band">Blackmail</span>, <span class="band">Queens of the Stone Age</span>); Dortmund - Soundgarden; ~25 EUR</li>
 <li><span class="datum">16.01.2003</span>	<span class="band">Urlaub in Polen</span>, <span class="band">Ken</span>; Dortmund - Sabotage (Visions Party); 5 EUR</li>
-<li><span class="datum">20.02.2003</span>	<span class="band">Sigur Rós</span>; Berlin - Arena Berlin; ~26 EUR</li>
+<li><span class="datum">20.02.2003</span>	<span class="band">Sigur Rós</span>; Berlin - Arena Berlin; 27.60 EUR</li>
 <li><span class="datum">18.05.2003</span>	<span class="band">Aereogramme</span> (Support: <span class="band">Cosmic Casino</span>); Münster - Gleis 22; ~12  EUR</li>
 <li><span class="datum">24.05.2003</span>	<span class="band">Tomte</span> (Support: <span class="band">Home of the lame</span>); Magdeburg - Projekt 7; ~8 EUR</li>
 <li><span class="datum">27.05.2003</span>	<span class="band">Joan of Arc</span> (Support: <span class="band">Owen</span>); Magdeburg - Hot Alte Bude; ~8 EUR</li>
