update juggling page

--- a/src/main/site/juggling.xhtml
+++ b/src/main/site/juggling.xhtml
@@ -13,7 +13,7 @@
 
 <h1>Juggling in Pittsburgh</h1>
 
-Where to juggle in Pittsburgh (last updated 2013-08-30):
+Where to juggle in Pittsburgh (last updated 2014-02-26):
 <ul style="">
     <li><strong>Pittsburgh Show Offs</strong><br />
     Meeting Thursdays 6-8pm together with the CMU juggling club on the CMU campus (see below).<!-- in the <a href="http://www.unionproject.org/">Union Project</a> (former church, 801 N Negley Avenue). Active, mostly regular meeting of small group. See facebook page for short-term updates. The meeting follows the meeting of the <a href="https://www.facebook.com/steelcityhoopunion">Steel City Hoop Union</a> (6:30-7:30pm).--> <br />
@@ -94,13 +94,15 @@ Inspired by Iain Murray's <a href="http://homepages.inf.ed.ac.uk/imurray2/juggli
     <li><span class="datum">04.10.2013 - 06.10.2013</span>	<span class="where">Asheville, NC</span> (<a href="http://www.ashevillejugglingfestival.com/">Asheville Juggling Festival</a>)</li>
     <li><span class="datum">12.10.2013</span>	<span class="where">Cleveland, OH</span> (<a href="https://www.facebook.com/events/582125768486298/">Cleveland Circus</a>)</li>
     <li><span class="datum">01.11.2013 - 02.11.2013</span>	<span class="where">Sewickley, PA</span> (<a href="http://www.allinjest.com/jugglingfestclub.html">Not Quite Pittsburgh Juggling Festival</a>)</li>
+    <li><span class="datum">27.12.2013 - 02.01.2014</span>	<span class="where">Someren, The Netherlands</span> (Pass-Out 11)</li>
+    <li><span class="datum">31.01.2014 - 02.02.2014</span>	<span class="where">Atlanta, GA</span> (<a href="http://atlantajugglers.org/festivals/gh14.htm">36th Annual Groundhog Day Jugglers Festival</a>)</li>
 </ul>
 
 <h2>Planned juggling conventions</h2>
 
 <ul>
-    <li><span class="datum">27.12.2013 - 02.01.2014</span>	<span class="where">Enschede</span> (Pass-Out 11)</li>
-    <li><span class="datum">31.01.2014 - 02.02.2014</span>	<span class="where">Atlanta, GA</span> (<a href="http://atlantajugglers.org/festivals/gh14.htm">36th Annual Groundhog Day Jugglers Festival</a>)</li>
+    <li><span class="datum">11.04.2014 - 13.04.2014</span>	<span class="where">Rochester, NY</span> (<a href="http://www.rit.edu/sg/jugglingclub/jugglein/">The 37th RIT Spring Juggle-In</a>)</li>
+    <li><span class="datum">08.06.2014 - 13.06.2014</span>	<span class="where">Boulder, CO</span> (Pass-Out)</li>
     <li><span class="datum">28.07.2014 - 02.08.2014</span>	<span class="where">West Lafayette, IN</span> (<a href="http://www.juggle.org/ija/festival/">IJA Festival</a>)</li>
     <li><span class="datum">19.07.2014 - 27.07.2014</span>	<span class="where">Millstreet, Ireland</span> (<a href="http://ejc2014.org/">ECJ 2013</a>)</li>
 </ul>
