--- a/src/main/site/juggling.xhtml
+++ b/src/main/site/juggling.xhtml
@@ -13,7 +13,7 @@
 
 <h1>Juggling in Pittsburgh</h1>
 
-Where to juggle in Pittsburgh (last updated 2014-02-26):
+<p>Where to juggle in Pittsburgh (last updated 2014-02-26):</p>
 <ul style="">
     <li><strong>Pittsburgh Show Offs</strong><br />
     Meeting Thursdays 6-8pm together with the CMU juggling club on the CMU campus (see below).<!-- in the <a href="http://www.unionproject.org/">Union Project</a> (former church, 801 N Negley Avenue). Active, mostly regular meeting of small group. See facebook page for short-term updates. The meeting follows the meeting of the <a href="https://www.facebook.com/steelcityhoopunion">Steel City Hoop Union</a> (6:30-7:30pm).--> <br />
@@ -23,7 +23,7 @@ Where to juggle in Pittsburgh (last updated 2014-02-26):
         Meeting Sundays 4-6pm and Thursdays 6-8pm on or near the CMU campus. In nice summer weather, meetings are typically outside on the cut in front of Purnell; in the winter and in bad weather the Sunday meeting is the atrium of Newell Simon Hall and the Thursday meeting is in a changing location on campus. Growing group of students and nonstudents. See news section on the website or join mailing list for room announcements and short-term updates. <br />
         <a href="http://www.andrew.cmu.edu/user/juggle/">website</a>, <a href="https://lists.andrew.cmu.edu/mailman/listinfo/juggling-members">mailing list</a>, <a href="http://www.openstreetmap.org/?mlat=40.443&amp;mlon=-79.94343&amp;zoom=16&amp;layers=M">map</a>
     </li>
-    <li><strong>The Steel City Clown Brigade</strong></br />
+    <li><strong>The Steel City Clown Brigade</strong><br />
         Clown troup with lots of children who do also some juggling. Meeting in Homestead, PA. See website for meeting times.<br />
         <a href="http://steelcityclownbrigade.blogspot.com/">website</a>
         </li>
@@ -32,7 +32,6 @@ Where to juggle in Pittsburgh (last updated 2014-02-26):
         <a href="http://www.allinjest.com/jugglingfestclub.html">website</a>, <a href="http://www.openstreetmap.org/?mlat=40.65079&amp;mlon=-80.23315&amp;zoom=12&amp;layers=M">map</a>
         </li>
 </ul>
-
 <p>
 If you know other regular meetings, let me know about it (mail: kaestner (at) cmu.edu).
 I don't run any of the clubs, I just wanted to make them easier to find. If you're looking for a performer, please email someone else, perhaps a club organizer.
@@ -57,7 +56,7 @@ Inspired by Iain Murray's <a href="http://homepages.inf.ed.ac.uk/imurray2/juggli
     <li>Lincoln, NE - Lincoln City Jugglers, 04.12.2013</li>
     <li>Ames, IA - ISU Juggling and Unicycling Club, 04.12.2013</li>
 </ul>
-(did some passing in all those clubs)
+<p>(did some passing in all those clubs)</p>
 
 <h2>Attended juggling conventions</h2>
 
@@ -96,12 +95,13 @@ Inspired by Iain Murray's <a href="http://homepages.inf.ed.ac.uk/imurray2/juggli
     <li><span class="datum">01.11.2013 - 02.11.2013</span>	<span class="where">Sewickley, PA</span> (<a href="http://www.allinjest.com/jugglingfestclub.html">Not Quite Pittsburgh Juggling Festival</a>)</li>
     <li><span class="datum">27.12.2013 - 02.01.2014</span>	<span class="where">Someren, The Netherlands</span> (Pass-Out 11)</li>
     <li><span class="datum">31.01.2014 - 02.02.2014</span>	<span class="where">Atlanta, GA</span> (<a href="http://atlantajugglers.org/festivals/gh14.htm">36th Annual Groundhog Day Jugglers Festival</a>)</li>
+    <li><span class="datum">11.04.2014 - 13.04.2014</span>	<span class="where">Rochester, NY</span> (<a href="http://www.rit.edu/sg/jugglingclub/jugglein/">The 37th RIT Spring Juggle-In</a>)</li>
 </ul>
 
 <h2>Planned juggling conventions</h2>
 
 <ul>
-    <li><span class="datum">11.04.2014 - 13.04.2014</span>	<span class="where">Rochester, NY</span> (<a href="http://www.rit.edu/sg/jugglingclub/jugglein/">The 37th RIT Spring Juggle-In</a>)</li>
+  <li><span class="datum">02.05.2014 - 04.05.2014</span>	<span class="where">Augsburg</span> (<a href="http://www.shutupandjuggle.com/convention/">Notconvention</a>)</li>
     <li><span class="datum">08.06.2014 - 13.06.2014</span>	<span class="where">Boulder, CO</span> (Pass-Out)</li>
     <li><span class="datum">28.07.2014 - 02.08.2014</span>	<span class="where">West Lafayette, IN</span> (<a href="http://www.juggle.org/ija/festival/">IJA Festival</a>)</li>
     <li><span class="datum">19.07.2014 - 27.07.2014</span>	<span class="where">Millstreet, Ireland</span> (<a href="http://ejc2014.org/">ECJ 2013</a>)</li>
