--- a/src/main/site/juggling.xhtml
+++ b/src/main/site/juggling.xhtml
@@ -20,7 +20,7 @@
     <a href="http://www.pittsburghshowoffs.com/">website</a>, <a href="http://www.facebook.com/pages/Pittsburgh-Show-Offs/208247425898638">facebook</a><!--, <a href="http://www.openstreetmap.org/?mlat=40.472&amp;mlon=-79.9265&amp;zoom=15&amp;layers=M">map</a>-->
     </li>
     <li><strong>Carnegie Mellon Masters of Flying Objects</strong><br />
-        Meeting Sundays 4-6pm and Thursdays 6-8pm on or near the CMU campus. In nice summer weather, meetings are typically outside on the cut in front of Purnell; in the winter and in bad weather the Sunday meeting is the atrium of Newell Simon Hall and the Thursday meeting is in a changing location on campus. Growing group of students and nonstudents. See news section on the website or join mailing list for room announcements and short-term updates. <br />
+    Meeting Sundays 4-6pm and Thursdays 6-8pm on or near the CMU campus. During the summer 2014, we meet Sundays on Schengly Plaza outside of the Carnegie Library and Thursday on the CMU campus in front of Purnell. In bad weather we meet in the atrium of Newell Simon Hall. <!-- In nice summer weather, meetings are typically outside on the cut in front of Purnell; in the winter and in bad weather the Sunday meeting is the atrium of Newell Simon Hall and the Thursday meeting is in a changing location on campus.--> Growing group of students and nonstudents. See news section on the website or join mailing list for room announcements and short-term updates. <br />
         <a href="http://www.andrew.cmu.edu/user/juggle/">website</a>, <a href="https://lists.andrew.cmu.edu/mailman/listinfo/juggling-members">mailing list</a>, <a href="http://www.openstreetmap.org/?mlat=40.443&amp;mlon=-79.94343&amp;zoom=16&amp;layers=M">map</a>
     </li>
     <li><strong>The Steel City Clown Brigade</strong><br />
@@ -96,14 +96,13 @@ Inspired by Iain Murray's <a href="http://homepages.inf.ed.ac.uk/imurray2/juggli
     <li><span class="datum">27.12.2013 - 02.01.2014</span>	<span class="where">Someren, The Netherlands</span> (Pass-Out 11)</li>
     <li><span class="datum">31.01.2014 - 02.02.2014</span>	<span class="where">Atlanta, GA</span> (<a href="http://atlantajugglers.org/festivals/gh14.htm">36th Annual Groundhog Day Jugglers Festival</a>)</li>
     <li><span class="datum">11.04.2014 - 13.04.2014</span>	<span class="where">Rochester, NY</span> (<a href="http://www.rit.edu/sg/jugglingclub/jugglein/">The 37th RIT Spring Juggle-In</a>)</li>
+  <li><span class="datum">02.05.2014 - 03.05.2014</span>	<span class="where">Augsburg</span> (<a href="http://www.shutupandjuggle.com/convention/">Notconvention</a>)</li>
 </ul>
 
 <h2>Planned juggling conventions</h2>
 
 <ul>
-  <li><span class="datum">02.05.2014 - 04.05.2014</span>	<span class="where">Augsburg</span> (<a href="http://www.shutupandjuggle.com/convention/">Notconvention</a>)</li>
     <li><span class="datum">08.06.2014 - 13.06.2014</span>	<span class="where">Boulder, CO</span> (Pass-Out)</li>
-    <li><span class="datum">28.07.2014 - 02.08.2014</span>	<span class="where">West Lafayette, IN</span> (<a href="http://www.juggle.org/ija/festival/">IJA Festival</a>)</li>
     <li><span class="datum">19.07.2014 - 27.07.2014</span>	<span class="where">Millstreet, Ireland</span> (<a href="http://ejc2014.org/">ECJ 2013</a>)</li>
 </ul>
 
