update concert history

--- a/src/main/site/concerts.xhtml
+++ b/src/main/site/concerts.xhtml
@@ -552,7 +552,12 @@
 <li><span class="datum">08.08.2013</span>	<span class="festival">Haldern Pop 2013</span> (<span class="band">Luke Sital-Singh</span>, <span class="band">Lubomyr Melnyk</span>, <span class="band">We Were Promised Jetpacks</span>, <span class="band">Julia Holter</span>, <span class="band">Suuns</span>, <span class="band">Gold Panda</span>); Rees-Haldern; 85 EUR</li>
 <li><span class="datum">09.08.2013</span>	<span class="festival">Haldern Pop 2013</span> (<span class="band">Ja, Panik</span>, <span class="band">Die Goldenen Zitronen</span>, <span class="band">Lee Fields &amp; the Expressions</span>, <span class="band">Tom Odell</span>, <span class="band">Villagers</span>, <span class="band highlight">Sophie Hunger</span>, <span class="band">The Strypes</span>, <span class="band">These New Puritans</span>, <span class="band">James</span>); Rees-Haldern; 85 EUR</li>
 <li><span class="datum">10.08.2013</span>	<span class="festival">Haldern Pop 2013</span> (<span class="band">Orchestre Miniature in the Park</span>, <span class="band">Tr&uuml;mmer</span>, <span class="band">Duologue</span>, <span class="band">Ebbot Lundberg with Trummor &amp; Orgel</span>, <span class="band">Anna von Hausswolff</span>, <span class="band">Kettcar</span>, <span class="band">Local Natives</span>, <span class="band">Orchestre Miniatue in the Park</span>, <span class="band">Glen Hansard</span>, <span class="band">Regina Spektor</span>, <span class="band">Efterklang</span>,<span class="band">Brandt Brauer Frick</span>); Rees-Haldern; 85 EUR</li>
-
+<li><span class="datum">19.09.2013</span>	<span class="band">Sigur Rós</span> (Support <span class="band">Julianna Barwick</span>); Pittsburgh - Stage AE; 47.30 USD</li>
+<li><span class="datum">21.09.2013</span>	<span class="band">The XX</span> (Support <span class="band">Mister Lies</span>); Pittsburgh - Stage AE; ~35 USD</li>
+<li><span class="datum">25.01.2014</span>	<span class="band">Pixies</span> (Support <span class="band">Fidlar</span>); Pittsburgh - Carnegie Music Hall of Oakland; 67.82 USD</li>
+<li><span class="datum">08.02.2014</span>	<span class="band">Julianna Barwick</span> (Support <span class="band">Vasillus</span>); Pittsburgh - Andy Warhol Museum; 14.81 USD</li>
+<li><span class="datum">10.05.2014</span>	<span class="band">A Silver Mt. Zion</span> (Support <span class="band">Total Life</span>); Pittsburgh - Mr. Smalls; 18.60 USD</li>
+<li><span class="datum">18.05.2014</span>	<span class="band">The Pains of Being Pure at Heart</span> (Support <span class="band">Fear of Men</span>, <span class="band">Ablebody</span>); Pittsburgh - Club Cafe; 14 USD</li>
 </ul>
 
 <h2>Future</h2>
