--- a/src/main/site/juggling.xhtml
+++ b/src/main/site/juggling.xhtml
@@ -97,13 +97,20 @@ Inspired by Iain Murray's <a href="http://homepages.inf.ed.ac.uk/imurray2/juggli
     <li><span class="datum">31.01.2014 - 02.02.2014</span>	<span class="where">Atlanta, GA</span> (<a href="http://atlantajugglers.org/festivals/gh14.htm">36th Annual Groundhog Day Jugglers Festival</a>)</li>
     <li><span class="datum">11.04.2014 - 13.04.2014</span>	<span class="where">Rochester, NY</span> (<a href="http://www.rit.edu/sg/jugglingclub/jugglein/">The 37th RIT Spring Juggle-In</a>)</li>
   <li><span class="datum">02.05.2014 - 03.05.2014</span>	<span class="where">Augsburg</span> (<a href="http://www.shutupandjuggle.com/convention/">Notconvention</a>)</li>
+    <li><span class="datum">08.06.2014 - 13.06.2014</span>	<span class="where">Boulder, CO</span> (Pass-Out)</li>
+    <li><span class="datum">19.07.2014 - 27.07.2014</span>	<span class="where">Millstreet, Ireland</span> (<a href="http://ejc2014.org/">ECJ 2014</a>)</li>
+    <li><span class="datum">01.08.2014 - 02.08.2014</span>	<span class="where">West Lafayette, IN</span> (<a href="http://www.juggle.org/ija/festival/">IJA Festival</a>)</li>
+    <li><span class="datum">26.09.2014 - 28.09.2014</span>	<span class="where">Asheville, NC</span> (<a href="http://www.ashevillejugglingfestival.com/">Asheville Juggling Festival</a>)</li>
 </ul>
 
 <h2>Planned juggling conventions</h2>
 
 <ul>
-    <li><span class="datum">08.06.2014 - 13.06.2014</span>	<span class="where">Boulder, CO</span> (Pass-Out)</li>
-    <li><span class="datum">19.07.2014 - 27.07.2014</span>	<span class="where">Millstreet, Ireland</span> (<a href="http://ejc2014.org/">ECJ 2013</a>)</li>
+    <li><span class="datum">17.10.2014 - 19.10.2014</span>	<span class="where">Cleveland, OH</span> (<a href="https://sites.google.com/a/case.edu/juggling/cleveland-cirus">Cleveland Circus</a>)</li>
+    <li><span class="datum">07.11.2014 - 09.11.2014</span>	<span class="where">Sewickley, PA</span> (<a href="http://www.allinjest.com/jugglingfestclub.html">Not Quite Pittsburgh Juggling Festival</a>)</li>
+    <li><span class="datum">27.12.2014 - 03.01.2015</span>	<span class="where">Someren</span> (Pass-Out)</li>
+    <li><span class="datum">20.07.2015 - 26.07.2015</span>	<span class="where">Quebec City</span> (<a href="http://www.juggle.org/ija/festival/">IJA Festival</a>)</li>
+    <li><span class="datum">08.08.2015 - 16.08.2015</span>	<span class="where">Bruneck, Italy</span> (<a href="http://ejc2014.org/">ECJ 2015</a>)</li>
 </ul>
 
 <p>
