--- a/src/main/site/juggling.xhtml
+++ b/src/main/site/juggling.xhtml
@@ -20,8 +20,12 @@
     <a href="http://www.pittsburghshowoffs.com/">website</a>, <a href="http://www.facebook.com/pages/Pittsburgh-Show-Offs/208247425898638">facebook</a><!--, <a href="http://www.openstreetmap.org/?mlat=40.472&amp;mlon=-79.9265&amp;zoom=15&amp;layers=M">map</a>-->
     </li>
     <li><strong>Carnegie Mellon Masters of Flying Objects</strong><br />
-    Meeting Sundays 4-6pm and Thursdays 6-8pm on or near the CMU campus. During the summer 2014, we meet Sundays on Schengly Plaza outside of the Carnegie Library and Thursday on the CMU campus in front of Purnell. In bad weather we meet in the atrium of Newell Simon Hall. <!-- In nice summer weather, meetings are typically outside on the cut in front of Purnell; in the winter and in bad weather the Sunday meeting is the atrium of Newell Simon Hall and the Thursday meeting is in a changing location on campus.--> Growing group of students and nonstudents. See news section on the website or join mailing list for room announcements and short-term updates. <br />
+    Meeting Sundays 4-6pm and Wednesdays 5-7pm on or near the CMU campus. In nice summer weather, meetings are typically outside on the cut in front of Purnell; in the winter and in bad weather the Sunday meeting is the atrium of Newell Simon Hall and the Wednesday meeting is in a changing location on campus. Growing group of students and nonstudents. See news section on the website or join mailing list for room announcements and short-term updates. <br />
         <a href="http://www.andrew.cmu.edu/user/juggle/">website</a>, <a href="https://lists.andrew.cmu.edu/mailman/listinfo/juggling-members">mailing list</a>, <a href="http://www.openstreetmap.org/?mlat=40.443&amp;mlon=-79.94343&amp;zoom=16&amp;layers=M">map</a>
+    </li>
+    <li><strong>Pittsburgh Show Offs</strong><br />
+    No longer meeting separately. Now joined with the CMU juggling club on the CMU campus (see above).<!-- in the <a href="http://www.unionproject.org/">Union Project</a> (former church, 801 N Negley Avenue). Active, mostly regular meeting of small group. See facebook page for short-term updates. The meeting follows the meeting of the <a href="https://www.facebook.com/steelcityhoopunion">Steel City Hoop Union</a> (6:30-7:30pm).--> <br />
+    <a href="http://www.pittsburghshowoffs.com/">website</a>, <a href="http://www.facebook.com/pages/Pittsburgh-Show-Offs/208247425898638">facebook</a><!--, <a href="http://www.openstreetmap.org/?mlat=40.472&amp;mlon=-79.9265&amp;zoom=15&amp;layers=M">map</a>-->
     </li>
     <li><strong>The Steel City Clown Brigade</strong><br />
         Clown troup with lots of children who do also some juggling. Meeting in Homestead, PA. See website for meeting times.<br />
@@ -101,16 +105,16 @@ Inspired by Iain Murray's <a href="http://homepages.inf.ed.ac.uk/imurray2/juggli
     <li><span class="datum">19.07.2014 - 27.07.2014</span>	<span class="where">Millstreet, Ireland</span> (<a href="http://ejc2014.org/">ECJ 2014</a>)</li>
     <li><span class="datum">01.08.2014 - 02.08.2014</span>	<span class="where">West Lafayette, IN</span> (<a href="http://www.juggle.org/ija/festival/">IJA Festival</a>)</li>
     <li><span class="datum">26.09.2014 - 28.09.2014</span>	<span class="where">Asheville, NC</span> (<a href="http://www.ashevillejugglingfestival.com/">Asheville Juggling Festival</a>)</li>
+    <li><span class="datum">17.10.2014 - 19.10.2014</span>	<span class="where">Cleveland, OH</span> (<a href="https://sites.google.com/a/case.edu/juggling/cleveland-cirus">Cleveland Circus</a>)</li>
+    <li><span class="datum">07.11.2014 - 09.11.2014</span>	<span class="where">Sewickley, PA</span> (<a href="http://www.allinjest.com/jugglingfestclub.html">Not Quite Pittsburgh Juggling Festival</a>)</li>
 </ul>
 
 <h2>Planned juggling conventions</h2>
 
 <ul>
-    <li><span class="datum">17.10.2014 - 19.10.2014</span>	<span class="where">Cleveland, OH</span> (<a href="https://sites.google.com/a/case.edu/juggling/cleveland-cirus">Cleveland Circus</a>)</li>
-    <li><span class="datum">07.11.2014 - 09.11.2014</span>	<span class="where">Sewickley, PA</span> (<a href="http://www.allinjest.com/jugglingfestclub.html">Not Quite Pittsburgh Juggling Festival</a>)</li>
     <li><span class="datum">27.12.2014 - 03.01.2015</span>	<span class="where">Someren</span> (Pass-Out)</li>
     <li><span class="datum">20.07.2015 - 26.07.2015</span>	<span class="where">Quebec City</span> (<a href="http://www.juggle.org/ija/festival/">IJA Festival</a>)</li>
-    <li><span class="datum">08.08.2015 - 16.08.2015</span>	<span class="where">Bruneck, Italy</span> (<a href="http://ejc2014.org/">ECJ 2015</a>)</li>
+    <li><span class="datum">01.08.2015 - 09.08.2015</span>	<span class="where">Bruneck, Italy</span> (<a href="http://ejc2014.org/">ECJ 2015</a>)</li>
 </ul>
 
 <p>
