add link to siteswap list

--- a/src/main/site/juggling.xhtml
+++ b/src/main/site/juggling.xhtml
@@ -117,6 +117,10 @@ Inspired by Iain Murray's <a href="http://homepages.inf.ed.ac.uk/imurray2/juggli
     <li><span class="datum">01.08.2015 - 09.08.2015</span>	<span class="where">Bruneck, Italy</span> (<a href="http://ejc2014.org/">ECJ 2015</a>)</li>
 </ul>
 
+<h1>Misc</h1>
+<p><a href="siteswaps.xhtml">List of compatible siteswaps</a></p>
+
+
 <p>
 <a href="http://www.cs.cmu.edu/~ckaestne/">Christian K&auml;stner</a>
 </p>
