--- a/src/main/site/juggling.xhtml
+++ b/src/main/site/juggling.xhtml
@@ -15,10 +15,6 @@
 
 <p>Where to juggle in Pittsburgh (last updated 2014-02-26):</p>
 <ul style="">
-    <li><strong>Pittsburgh Show Offs</strong><br />
-    Meeting Thursdays 6-8pm together with the CMU juggling club on the CMU campus (see below).<!-- in the <a href="http://www.unionproject.org/">Union Project</a> (former church, 801 N Negley Avenue). Active, mostly regular meeting of small group. See facebook page for short-term updates. The meeting follows the meeting of the <a href="https://www.facebook.com/steelcityhoopunion">Steel City Hoop Union</a> (6:30-7:30pm).--> <br />
-    <a href="http://www.pittsburghshowoffs.com/">website</a>, <a href="http://www.facebook.com/pages/Pittsburgh-Show-Offs/208247425898638">facebook</a><!--, <a href="http://www.openstreetmap.org/?mlat=40.472&amp;mlon=-79.9265&amp;zoom=15&amp;layers=M">map</a>-->
-    </li>
     <li><strong>Carnegie Mellon Masters of Flying Objects</strong><br />
     Meeting Sundays 4-6pm and Wednesdays 5-7pm on or near the CMU campus. In nice summer weather, meetings are typically outside on the cut in front of Purnell; in the winter and in bad weather the Sunday meeting is the atrium of Newell Simon Hall and the Wednesday meeting is in a changing location on campus. Growing group of students and nonstudents. See news section on the website or join mailing list for room announcements and short-term updates. <br />
         <a href="http://www.andrew.cmu.edu/user/juggle/">website</a>, <a href="https://lists.andrew.cmu.edu/mailman/listinfo/juggling-members">mailing list</a>, <a href="http://www.openstreetmap.org/?mlat=40.443&amp;mlon=-79.94343&amp;zoom=16&amp;layers=M">map</a>
@@ -107,14 +103,19 @@ Inspired by Iain Murray's <a href="http://homepages.inf.ed.ac.uk/imurray2/juggli
     <li><span class="datum">26.09.2014 - 28.09.2014</span>	<span class="where">Asheville, NC</span> (<a href="http://www.ashevillejugglingfestival.com/">Asheville Juggling Festival</a>)</li>
     <li><span class="datum">17.10.2014 - 19.10.2014</span>	<span class="where">Cleveland, OH</span> (<a href="https://sites.google.com/a/case.edu/juggling/cleveland-cirus">Cleveland Circus</a>)</li>
     <li><span class="datum">07.11.2014 - 09.11.2014</span>	<span class="where">Sewickley, PA</span> (<a href="http://www.allinjest.com/jugglingfestclub.html">Not Quite Pittsburgh Juggling Festival</a>)</li>
+    <li><span class="datum">27.12.2014 - 03.01.2015</span>	<span class="where">Someren</span> (Pass-Out)</li>
+    <li><span class="datum">16.01.2015 - 18.02.2015</span>	<span class="where">Madison, WI</span> (<a href="http://madjugglers.com/MadFest">The 47th Annual MadFest Juggling Festival</a>)</li>
+    <li><span class="datum">06.02.2015 - 08.02.2015</span>	<span class="where">Atlanta, GA</span> (<a href="http://atlantajugglers.org/festivals/gh15.htm">37th Annual Groundhog Day Jugglers Festival</a>)</li>
 </ul>
 
 <h2>Planned juggling conventions</h2>
 
 <ul>
-    <li><span class="datum">27.12.2014 - 03.01.2015</span>	<span class="where">Someren</span> (Pass-Out)</li>
+    <li><span class="datum">06.03.2015 - 08.03.2015</span>	<span class="where">Lehighton, PA</span> (<a href="http://poconojugglecircusartsfest.webstarts.com/">Pocono Juggle/Circus Arts Fest 2015</a>)</li>
+    <li><span class="datum">10.04.2015 - 12.04.2015</span>	<span class="where">Rochester, NY</span> (<a href="http://ritjuggle.blogspot.com/">The 38th RIT Spring Juggle-In</a>)</li>
     <li><span class="datum">20.07.2015 - 26.07.2015</span>	<span class="where">Quebec City</span> (<a href="http://www.juggle.org/ija/festival/">IJA Festival</a>)</li>
     <li><span class="datum">01.08.2015 - 09.08.2015</span>	<span class="where">Bruneck, Italy</span> (<a href="http://ejc2014.org/">ECJ 2015</a>)</li>
+    <li><span class="datum">27.12.2015 - 03.01.2016</span>	<span class="where">Koenigswiesen</span> (Pass-Out)</li>
 </ul>
 
 <h1>Misc</h1>
