--- a/src/main/site/juggling.xhtml
+++ b/src/main/site/juggling.xhtml
@@ -16,7 +16,7 @@
 <p>Where to juggle in Pittsburgh (last updated 2015-03-01):</p>
 <ul style="">
     <li><strong>Carnegie Mellon Masters of Flying Objects</strong><br />
-    Meeting Sundays 4-6pm and Wednesdays 6-8pm on or near the CMU campus. In nice summer weather, meetings are typically outside on the cut in front of Purnell; in the winter and in bad weather the Sunday meeting is the atrium of Newell Simon Hall and the Wednesday meeting is in a changing location on campus; during the summer break Sunday meetings are typically on Schenley Plaza. Growing group of students and nonstudents. See news section on the website or join mailing list for room announcements and short-term updates. <br />
+    Meeting Sundays 3-5pm and Wednesdays 5:30-7pm on or near the CMU campus. In nice summer weather, meetings are typically outside on the cut in front of Purnell; in the winter and in bad weather the Sunday meeting is the atrium of Newell Simon Hall and the Wednesday meeting is in a changing location on campus; during the summer break Sunday meetings are typically on Schenley Plaza. Growing group of students and nonstudents. See news section on the website or join mailing list for room announcements and short-term updates. <br />
         <a href="http://www.andrew.cmu.edu/user/juggle/">website</a>, <a href="https://lists.andrew.cmu.edu/mailman/listinfo/juggling-members">mailing list</a>, <a href="http://www.openstreetmap.org/?mlat=40.443&amp;mlon=-79.94343&amp;zoom=16&amp;layers=M">map</a>
     </li>
     <li><strong>Pittsburgh Show Offs</strong><br />
@@ -55,6 +55,7 @@ Inspired by Iain Murray's <a href="http://homepages.inf.ed.ac.uk/imurray2/juggli
     <li>Minneapolis, ME - The Minnesota Neverthriving, 03.06.2013</li>
     <li>Lincoln, NE - Lincoln City Jugglers, 04.12.2013</li>
     <li>Ames, IA - ISU Juggling and Unicycling Club, 04.12.2013</li>
+    <li>Lincoln, NE - Lincoln City Jugglers, 11.11.2015</li>
 </ul>
 <p>(did some passing in all those clubs)</p>
 
@@ -134,7 +135,7 @@ Inspired by Iain Murray's <a href="http://homepages.inf.ed.ac.uk/imurray2/juggli
 
 
 <p>
-<a href="http://www.cs.cmu.edu/~ckaestne/">Christian K&auml;stner</a>
+<a href="http://www.cs.cmu.edu/~ckaestne/">Christian Kästner</a>
 </p>
 
 
