various minor updates

--- a/src/main/site/concerts.xhtml
+++ b/src/main/site/concerts.xhtml
@@ -559,6 +559,10 @@
 <li><span class="datum">10.05.2014</span>	<span class="band">A Silver Mt. Zion</span> (Support <span class="band">Total Life</span>); Pittsburgh - Mr. Smalls; 18.60 USD</li>
 <li><span class="datum">18.05.2014</span>	<span class="band">The Pains of Being Pure at Heart</span> (Support <span class="band">Fear of Men</span>, <span class="band">Ablebody</span>); Pittsburgh - Club Cafe; 14 USD</li>
 <li><span class="datum">27.02.2015</span>	<span class="band">The Twilight Sad</span> (Support <span class="band">Port St. Willow</span>); Pittsburgh - Brillobox; 15.55 USD</li>
+<li><span class="datum">25.03.2015</span>	<span class="band">A Winged History for the Sullen</span> (Support <span class="band">loscil</span>); Pittsburgh - Andy Warhol Museum; 14.81 USD</li>
+<li><span class="datum">03.08.2015</span>	<span class="band">Death from Above 1976</span> (Support <span class="band">The Bots</span>); Pittsburgh - Altar Bar; 15 USD</li>
+<li><span class="datum">22.08.2015</span>	<span class="band">Beach House</span> (Support <span class="band">Romanic States</span>); Pittsburgh - Mr. Smalls; 30.13 USD</li>
+<li><span class="datum">16.03.2016</span>	<span class="band">Shearwater</span> (Support <span class="band">Laura Gibson</span>); Pittsburgh - Club Cafe; 19.13 USD</li>
 </ul>
 
 <h2>Future</h2>
