--- a/src/main/site/juggling.xhtml
+++ b/src/main/site/juggling.xhtml
@@ -5,8 +5,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title>Juggling in Pittsburgh</title>
-
-	<link rel="stylesheet" type="text/css" href="about.css" />
+        <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,400italic|Roboto+Slab:400,700" rel="stylesheet" type="text/css"/>
+	<link rel="stylesheet" type="text/css" href="css/text.css" />
 </head>
 
 <body>
@@ -117,16 +117,16 @@ Inspired by Iain Murray's <a href="http://homepages.inf.ed.ac.uk/imurray2/juggli
     <li><span class="datum">06.11.2014 - 08.11.2014</span>  <span class="where">Monaca, PA</span> (<a href="http://www.allinjest.com/jugglingfestclub.html">Not Quite Pittsburgh Juggling Festival</a>)</li>
     <li><span class="datum">27.12.2015 - 03.01.2016</span>	<span class="where">Koenigswiesen</span> (Pass-Out)</li>
     <li><span class="datum">07.01.2016 - 10.01.2016</span>	<span class="where">Quebec City</span> (<a href="http://www.turbo418.com/turbo418-avenir.php?lang=A">Turbo Fest 10</a>)</li>
+    <li><span class="datum">05.02.2016 - 07.02.2016</span>	<span class="where">Atlanta, GA</span> (<a href="http://atlantajugglers.org/festivals/gh16.htm">38th Annual Groundhog Day Jugglers Festival</a>)</li>
+    <li><span class="datum">12.02.2016 - 14.02.2016</span>	<span class="where">St. Paul, MI</span> (<a href="http://mondofest.org/">Mondo XXVII Festival</a>)</li>
 </ul>
 
 <h2>Planned juggling conventions</h2>
 
 <ul>
-    <li><span class="datum">05.02.2016 - 07.02.2016</span>	<span class="where">Atlanta, GA</span> (<a href="http://atlantajugglers.org/festivals/gh16.htm">38th Annual Groundhog Day Jugglers Festival</a>)</li>
-    <li><span class="datum">12.02.2016 - 14.02.2016</span>	<span class="where">St. Paul, MI</span> (<a href="http://mondofest.org/">Mondo XXVII Festival</a>)</li>
-    <li><span class="datum">26.02.2016 - 28.02.2016</span>	<span class="where">Austin, TX</span> (<a href="http://www.juggling.place.org/jugglefest/">Jugglefest XXIII</a>)</li>
     <li><span class="datum">08.04.2016 - 10.04.2016</span>  <span class="where">Rochester, NY</span> (<a href="http://ritjuggle.blogspot.com/">The 39th RIT Spring Juggle-In</a>)</li>
     <li><span class="datum">06.05.2016 - 08.05.2016</span>	<span class="where">College Park, MD</span> (<a href="https://www.facebook.com/events/1540482139595491/">Congress of Jugglers 2016</a>)</li>
+    <li><span class="datum">29.05.2016 - 03.06.2016</span>  <span class="where">Hickory, NC</span> (Pass-Out)</li>
     <li><span class="datum">30.07.2016 - 07.08.2016</span>  <span class="where">Almere, Netherlands</span> (<a href="http://ejc2014.org/">ECJ 2015</a>)</li>
 </ul>
 
